<resources>
    <string name="app_name">Topface</string>
    <string name="app_locale">en_US</string>
    <string name="general_error">ERROR</string>
    <string name="general_warning">WARNING</string>
    <string name="general_ok">OK</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete_title">Delete</string>
    <string name="general_dialog_loading">Loading</string>
    <string name="general_dialog_saving">Saving</string>
    <string name="general_fill_button">Fill</string>
    <string name="general_send_full">Send</string>
    <string name="general_dialog_retry">Retry</string>
    <string name="general_copy_title">Copy</string>
    <string name="general_back">Back</string>
    <string name="general_server_error">Error. Please try again later</string>
    <string name="general_data_error">Error. Please try again.</string>
    <string name="general_internet_off">No Internet connection. Please try again.</string>
    <string name="general_purchasing_error">Please, report about this purchase error to support@topface.ru</string>
    <string name="general_msg_copied">Message copied</string>
    <string name="general_spinner_title">Choose action</string>
    <string name="general_profile_error">Error loading profile</string>
    <string name="general_dbl_all">All</string>
    <string name="general_dbl_unread">Unread</string>
    <string name="general_edit_button">Edit</string>
    <string name="general_save_button">Save</string>
    <string name="general_send_button">Send</string>
    <string name="general_boys">Guys</string>
    <string name="general_girls">Girls</string>
    <string name="general_city">City</string>
    <string name="general_dating">Dating</string>
    <string name="general_likes">They like me</string>
    <string name="general_likes_me">Who likes me</string>
    <string name="general_sympathy">Like</string>
    <string name="general_delight">Admiration</string>
    <string name="general_mutual">Mutual</string>
    <string name="general_dialogs">Dialogues</string>
    <string name="general_tops">Top</string>
    <string name="general_visitors">Guests</string>
    <string name="general_profile">Profile</string>
    <string name="general_settings">Settings</string>
    <string name="general_chat">Chat</string>
    <string name="auth_btn_vk">Login with vk.com</string>
    <string name="auth_btn_fb">Login with Facebook</string>
    <string name="auth_retry">Retry</string>
    <string name="auth_vk_name">VK</string>
    <string name="dating_header_girls">Girls from %1$d to %2$d</string>
    <string name="dating_header_guys">Guys from %1$d to %2$d</string>
    <string name="dating_switch_button">More…</string>
    <string name="dating_skip_button">Next</string>
    <string name="dating_prev_button">Previous</string>
    <string name="dating_chat_button">Chat</string>
    <string name="likes_background_text">No likes</string>
    <string name="visitors_background_text">No guests</string>
    <string name="mutual_background_text">No likes</string>
    <string name="chat_background_text">No incoming messages</string>
    <string name="chat_comment">Write a message</string>
    <string name="chat_gift_in">You have received a new gift</string>
    <string name="chat_gift_out">You have sent a gift.</string>
    <string name="chat_like_in">Someone likes you!</string>
    <string name="chat_like_out">You have sent a like</string>
    <string name="chat_mutual_in">You have received an admiration</string>
    <string name="chat_mutual_out">You have sent an admiration</string>
    <string name="chat_wish_in">Someone has sent you a Secret Wish.</string>
    <string name="chat_wish_out">You have sent a Secret Wish.</string>
    <string name="chat_sexuality_in">You sexuality has been rated</string>
    <string name="chat_sexuality_out">You have rated sexuality</string>
    <string name="chat_wink_in">She winked at you.</string>
    <string name="chat_wink_out">You winked at him.</string>
    <string name="chat_dialog_gps">GPS is off! Turn it on?</string>
    <string name="chat_toast_fail_location">Cannot identify your location</string>
    <string name="filter_filter">Filter</string>
    <string name="filter_age_string">From %1$d to %2$d</string>
    <string name="filter_only_online">Only online</string>
    <string name="filter_only_beautiful">Only beautiful</string>
    <string name="filter_extra_parameters">Advanced search</string>
    <string name="filter_age">Select age</string>
    <string name="filter_online">Online</string>
    <string name="filter_all">All</string>
    <string name="filter_cities_all">All cities</string>
    <string name="filter_select_city">Select city</string>
    <string name="buying_header_title">Purchases</string>
    <string name="buying_you_have">You have</string>
    <string name="buying_you_have_no_coins_for_gift">You need %d {{coins}} to buy this gift</string>
    <string name="buying_default_message">You can send gifts and admirations for coins</string>
    <string name="buying_money">Purchase coins</string>
    <string name="profile_header_title">My profile</string>
    <string name="profile_btn_chat">Chat</string>
    <string name="profile_add_title">Add a photo</string>
    <string name="profile_add_album">Choose from available</string>
    <string name="profile_add_camera">Take a photo</string>
    <string name="profile_photo">Photo</string>
    <string name="profile_form">Profile form</string>
    <string name="profile_gifts">Gifts</string>
    <string name="profile_actions">Actions</string>
    <string name="profile_empty_form">User hasn\'t filled in his profile yet</string>
    <string name="profile_ask_form">Ask to fill in the profile</string>
    <string name="edit_title">Edit</string>
    <string name="edit_bg_photo">Background image</string>
    <string name="edit_album">Album</string>
    <string name="edit_profile_photo">Change photo</string>
    <string name="edit_interests">Interests</string>
    <string name="edit_selected">Selected</string>
    <string name="edit_name">Name</string>
    <string name="edit_age">Age</string>
    <string name="edit_status">Status</string>
    <string name="edit_set_as_main">Set as main</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_restore">Restore</string>
    <string name="album_add_photo_title">Add photo</string>
    <string name="gifts_romantic">Romantic</string>
    <string name="gifts_friends">Friendly</string>
    <string name="gifts">Gifts</string>
    <string name="gifts_present">Congratulations</string>
    <string name="gifts_title">Choose a gift</string>
    <string name="gifts_send_btn">Send a gift</string>
    <string name="map_location_progress">Detecting location</string>
    <string name="map_address">Write address</string>
    <string name="form">Profile Form</string>
    <string name="form_not_specified">Not specified</string>
    <string name="form_main">Main</string>
    <string name="form_physique">Physique</string>
    <string name="form_social">Social</string>
    <string name="form_habits">Habits</string>
    <string name="form_detail">Details</string>
    <plurals name="form_matches">
        <item quantity="zero">You have no matches</item>
        <item quantity="other">You have %d matches</item>
        <item quantity="one">You have %d match</item>
    </plurals>
    <string name="invite_search_hint">Find friends</string>
    <string name="invite_title">Invitations</string>
    <string name="invite_is_free">The invitation is free!</string>
    <string name="invite_error">Can\'t send the invitations. Please, try again.</string>
    <string name="invite_completed">Invitation sent</string>
    <string name="settings_header_title">Settings</string>
    <string name="settings_wifi">Wi-Fi only</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_summary">Notifications about new messages and new likes</string>
    <string name="settings_select_ringtone">Select ringtone</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_photo_preloading">Preloading photos</string>
    <string name="settings_photo_preloading_summary">Preloading next photo in your album</string>
    <string name="settings_notifications_header">Notifications</string>
    <string name="settings_other_header">Other</string>
    <string name="settings_likes">Likes</string>
    <string name="settings_mutual">Mutual attractions</string>
    <string name="settings_messages">Messages</string>
    <string name="settings_guests">Guests</string>
    <string name="settings_help">Help</string>
    <string name="settings_account">Account</string>
    <string name="settings_feedback">Leave feedback</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_copyright">Copyright 2010-</string>
    <string name="settings_rights_reserved">Topface \nAll rights reserved</string>
    <string name="settings_extra">You can find more information on</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_logout_msg">Do you really want to logout?</string>
    <string name="settings_error_message">Error message</string>
    <string name="settings_ask_developer">Ask a developer</string>
    <string name="settings_payment_problems">Payment problems</string>
    <string name="settings_cooperation">Cooperation</string>
    <string name="settings_feedback_success_msg">Thank you, your message has been sent</string>
    <string name="settings_switch_on">on</string>
    <string name="settings_switch_off">off</string>
    <string name="leaders_go_date">Put me here!</string>
    <string name="leaders_leader_now">Now everyone will see you!</string>
    <string name="leaders_need_photo">Please, select a photo!</string>
    <string name="leaders_select_photo">Please, select your best photo:</string>
    <plurals name="leaders_price">
        <item quantity="other">Put me here for %d coins</item>
        <item quantity="one">Put me here for %d coin</item>
    </plurals>
    <string name="photo_add_or">Photo has been added</string>
    <string name="photo_add_error">An error occurred when adding your photo. Please, try again.</string>
    <string name="dashbrd_popup_rating">Did you like our application? Raise our rating! The higher rating the more people you will meet in Topface</string>
    <string name="dashbrd_popup_cancel">Don\'t ask me again</string>
    <string name="dashbrd_popup_rate">Yes, I would rate</string>
    <string name="dashbrd_popup_later">Ask later</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an account</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="error_login_password">Incorrect login/password</string>
    <string name="recovering_password">Password recovery</string>
    <string name="send_password">Send password</string>
    <string name="enter_email_from_registration">Enter the e-mail which you entered during registration</string>
    <string name="to_see_likes_by_vip">To find out right now who likes you, activate a VIP- account</string>
    <string name="skip">Skip</string>
    <string name="chat">Chat</string>
    <string name="skip_all">Skip all</string>
    <string name="watching_as_list">View a list of</string>
    <string name="watching_sequentually">View sequentially</string>
    <string name="or_use_common_likes_list">Or browse those that liked you in the common list</string>
</resources>