<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingBottom="10dp">

    <TextView
            android:id="@+id/btnRatingPopupTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/dashbrd_popup_rating"/>

    <Button
            android:id="@+id/btnRatingPopupRate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dashbrd_popup_rate"/>

    <Button
            android:id="@+id/btnRatingPopupLate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dashbrd_popup_later"/>

    <Button
            android:id="@+id/btnRatingPopupCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dashbrd_popup_cancel"/>

</LinearLayout>