<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/auth_bg">

    <!--ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/auth_bg_spot"
            /-->

    <TextView
            android:id="@+id/tvRedAlert"
            style="@style/RedAlertTextView"
            android:textSize="12sp"
            android:text="@string/error_login_password"/>

    <LinearLayout
            android:id="@+id/loLoginGroup"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        >

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/AuthButtonsSmallText"
                android:text="@string/enter_email_from_registration"
                android:layout_marginBottom="16dp"
                android:gravity="left"/>

        <EditText
                android:id="@+id/edEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_signin"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/EditTextAuth"
                />

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >

            <ProgressBar
                    android:id="@+id/prsRecoverSending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    style="@android:style/Widget.ProgressBar.Small"
                    />

            <Button
                    android:id="@+id/btnRecover"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_password"
                    style="@style/RecoveryButtonsBigText"
                    android:background="@drawable/btn_signin_selector"
                    />
        </RelativeLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AuthButtonsBigText"
            android:text="@string/recovering_password"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/loLoginGroup"
            android:layout_marginBottom="64dp"
            />

    <TextView
            android:id="@+id/tvBackToMainAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:text="@string/general_back"
            android:drawableLeft="@drawable/ic_back"
            android:drawablePadding="8dp"
            style="@style/AuthButtonsBigText"
            android:gravity="center_vertical"
            />
</RelativeLayout>